[workspace]
members = [ "dao", "main" , "payroll-domain", "tx-app", "tx-factory", "tx-impl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Katsutoshi Itoh"]
description = "agile software development"
documentation = "https://www.amazon.co.jp/dp/4797347783"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
log = "0.4.22"
thiserror = "1.0.63"
tx-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
