[workspace]
members = [ "abstract-tx", "app", "dao", "hs-db", "payroll-app" , "payroll-domain", "payroll-factory", "payroll-impl", "payroll-test", "text-parser-tx-source", "threadpool", "tx-app", "tx-factory", "tx-impl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Katsutoshi Itoh"]
description = "agile software development"
documentation = "https://www.amazon.co.jp/dp/4797347783"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.95"
chrono = "0.4.38"
dyn-clone = "1.0.17"
env_logger = "0.11.6"
getopts = "0.2.21"
log = "0.4.22"
parsec-rs = { git = "https://github.com/cutsea110/fragments.git", package = "parsec-rs", branch = "main" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "1.0.63"
tx-rs = { git = "https://github.com/cutsea110/fragments.git", package = "tx-rs", branch = "main" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
