[workspace]
members = [ "abstract-tx", "app", "dao", "hs-db", "payroll-cli" , "payroll-domain", "payroll-factory", "payroll-impl", "payroll-test", "payroll-web", "text-parser-tx-source", "threadpool", "tx-app", "tx-app-impl", "tx-factory", "tx-impl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Katsutoshi Itoh"]
description = "agile software development"
documentation = "https://www.amazon.co.jp/dp/4797347783"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
dyn-clone = "1.0.20"
env_logger = "0.11.8"
getopts = "0.2.24"
log = "0.4.29"
parsec-rs = { git = "https://github.com/cutsea110/fragments.git", package = "parsec-rs", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0.69"
tx-rs = { git = "https://github.com/cutsea110/fragments.git", package = "tx-rs", branch = "main" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
