[package]
name = "hs-db"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
tx-rs.workspace = true

dao = { path = "../dao" }
payroll-domain = { path = "../payroll-domain" }
