[package]
name = "main"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.22"
parsec-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }
thiserror = "1.0.63"
tx-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }
