[package]
name = "main"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.95"
env_logger = "0.11.6"
log.workspace = true
parsec-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }
thiserror.workspace = true
tx-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }

dao = { path = "../dao" }
payroll-domain = { path = "../payroll-domain" }
text-parser-tx-source = { path = "../text-parser-tx-source" }
tx-app = { path = "../tx-app" }
tx-factory = { path = "../tx-factory" }
tx-impl = { path = "../tx-impl" }
