[package]
name = "mock-main"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
dyn-clone = "1.0.17"
env_logger = "0.11.6"
log = "0.4.22"
parsec-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }
thiserror = "1.0.63"
tx-rs = { git = "https://github.com/cutsea110/fragments.git", branch = "main" }

payroll-domain = { path = "../payroll-domain" }
