[package]
name = "payroll-app"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true

hs-db = { path = "../hs-db" }
text-parser-tx-source = { path = "../text-parser-tx-source" }
tx-app = { path = "../tx-app" }
tx-impl = { path = "../tx-impl" }
