[package]
name = "payroll-app"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
getopts.workspace = true
log.workspace = true

app = { path = "../app" }
hs-db = { path = "../hs-db" }
payroll-impl = { path = "../payroll-impl" }
text-parser-tx-source = { path = "../text-parser-tx-source" }
tx-app = { path = "../tx-app" }
tx-app-impl = { path = "../tx-app-impl" }
tx-impl = { path = "../tx-impl" }

[lib]
name = "payroll_app"
path = "src/lib.rs"

[[bin]]
name = "payroll-app"
path = "src/main.rs"
