[package]
name = "payroll-http"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
getopts.workspace = true
log.workspace = true

app = { path = "../app" }
hs-db = { path = "../hs-db" }
payroll-app = { path = "../payroll-app" }
payroll-impl = { path = "../payroll-impl" }
text-parser-tx-source = { path = "../text-parser-tx-source" }
threadpool = { path = "../threadpool" }
tx-app = { path = "../tx-app" }
tx-impl = { path = "../tx-impl" }

[lib]
name = "payroll_http"
path = "src/lib.rs"

[[bin]]
name = "payroll-http"
path = "src/main.rs"