[package]
name = "payroll-impl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true

payroll-domain = { path = "../payroll-domain" }
payroll-factory = { path = "../payroll-factory" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
