[package]
name = "payroll-impl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

payroll-domain = { path = "../payroll-domain" }
payroll-factory = { path = "../payroll-factory" }
