[package]
name = "payroll-test"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
getopts.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

parsec-rs.workspace = true

[lib]
name = "test_runner"
path = "src/lib.rs"

[[bin]]
name = "payroll-test"
path = "src/main.rs"
