[package]
name = "service-impl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }

payroll-db = { path = "../payroll-db" }
payroll-domain = { path = "../payroll-domain" }
service = { path = "../service" }
usecase = { path = "../usecase" }
usecase-impl = { path = "../usecase-impl" }
