[package]
name = "tx-impl"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
log.workspace = true
thiserror.workspace = true
tx-rs.workspace = true

dao = { path = "../dao" }
payroll-domain = { path = "../payroll-domain" }
payroll-impl = { path = "../payroll-impl" }
tx-app = { path = "../tx-app" }
